fixed stylesheet. Better looking spacing for posts

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -718,7 +718,7 @@ h6:before {
 }
 
 p {
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
 
 a {
